# multiplatform-autoposter

./: .gitignore  README.md  auth.py  db.py  main.py  pyproject.toml  tiktok.py
docs/: 1-tiktok-autposter.md  2-full-oauth.md
public/: privacy.html  tos.html
tests/: __init__.py  conftest.py  test_auth.py  test_db.py  test_main.py  test_tiktok.py
